--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,47 +1,60 @@
-<div class="registration-tittle">Registration</div>
-<form class="registration-form" [formGroup]="regService.getRegForm()" (ngSubmit)="onSubmit()" autocomplete="off">
-	 <div class="form-group">
-        <input name="name" formControlName="userName"/>
-        <div class="registration-field"
-        *ngIf="regService.getRegForm().controls['userName'].invalid && regService.getRegForm().controls['userName'].touched">    
-        <span *ngIf="regService.getRegForm().controls['userName'].errors.minlength">Минимальное количество букв-5</span>
-        <span *ngIf="regService.getRegForm().controls['userName'].errors.maxlength">Максимальное количество букв-15</span>
+<form [formGroup]="regService.getRegForm()" >
+    <div class="container">
+        <div class="row d-flex flex-column justify-content-center  align-items-center">
+            <div class="col-md-6 col-sm-12 text-center text-uppercase  registration-label font-weight-bold">Регистрация</div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group" >
+                    <label for="exampleInputEmail1">Имя</label>
+                    <input type="text" formControlName="userName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Имя">
+                    <div *ngIf="regService.getRegForm().controls['userName'].invalid && regService.getRegForm().controls['userName'].touched" >    
+                        <small class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.minlength">Минимальное количество букв-5</small>
+                        <small  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.maxlength">Максимальное количество букв-15</small>
+                    </div>
+                </div>
+                <div class="form-group" >
+                    <label for="exampleInputEmail1">Фамилия</label>
+                    <input type="text" formControlName="userSurname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Фамилия">
+                    <div *ngIf="regService.getRegForm().controls['userSurname'].invalid && regService.getRegForm().controls['userSurname'].touched" >    
+                        <small class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.minlength">Минимальное количество букв-5</small>
+                        <small  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.maxlength">Максимальное количество букв-15</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group" >
+                    <label for="exampleInputEmail1">Email</label>
+                    <input type="text" formControlName="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                    <div class="registration-field"
+                        *ngIf="regService.getRegForm().controls['userEmail'].invalid && regService.getRegForm().controls['userEmail'].touched">  
+                        <span *ngIf="regService.getRegForm().controls['userEmail'].errors.email"> Некоректный  Email</span>    
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md-4 col-sm-12">
+            <div formGroupName="Passwords" class="passwords">
+                <div class="form-group" >
+                    <label for="exampleInputEmail1">Пароль</label>
+                    <input type="password" formControlName="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
+                    <div class="registration-field"
+                    *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].invalid && regService.getRegForm().controls['Passwords'].controls['password'].touched">  
+                    <span *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].errors.minlength">Минимальное количество букв-5</span>    
+                    </div>
+                </div>
+                <div class="form-group" >
+                    <label for="exampleInputEmail1">Пароль</label>
+                    <input type="password" formControlName="confirmPassword" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
+                    <div class="registration-field"
+                        *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].invalid && regService.getRegForm().controls['Passwords'].controls['confirmPassword'].touched">  
+                        <span *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].errors.confirm">не совпадают</span>    
+                    </div>
+                </div>
+            </div>   
+            </div>
+            <div class="col-md-4 col-sm-4 d-flex justify-content-center">
+                <button type="button" class="btn btn-success" (click)="onSubmit()">Зарегестрироваться</button>
+            </div> 
         </div>
-  </div>
-  <div class="form-group">
-    <input name="name" formControlName="userSurname"/>
-    <div class="registration-field"
-    *ngIf="regService.getRegForm().controls['userSurname'].invalid && regService.getRegForm().controls['userSurname'].touched">    
-    <span *ngIf="regService.getRegForm().controls['userSurname'].errors.minlength">Минимальное количество букв-5</span>
-    <span *ngIf="regService.getRegForm().controls['userSurname'].errors.maxlength">Максимальное количество букв-15</span>
-    </div>
- </div>
-  <div class="form-group">
-		<input name="email" formControlName="userEmail" autocomplete="off"/>
-        <div class="registration-field"
-        *ngIf="regService.getRegForm().controls['userEmail'].invalid && regService.getRegForm().controls['userEmail'].touched">  
-        <span *ngIf="regService.getRegForm().controls['userEmail'].errors.email"> Некоректный  Email</span>    
-        </div>
-   </div>
-	 <div formGroupName="Passwords" class="passwords">
-			<div class="form-group">
-				<input type="password" formControlName="password"/>
-        <div class="registration-field"
-        *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].invalid && regService.getRegForm().controls['Passwords'].controls['password'].touched">  
-        <span *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].errors.minlength">Минимальное количество букв-5</span>    
-        </div>
-			</div>
-			<div class="form-group">
-				<input type="password" formControlName="confirmPassword"/>
-        <div class="registration-field"
-        *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].invalid && regService.getRegForm().controls['Passwords'].controls['confirmPassword'].touched">  
-        <span *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].errors.confirm">не совпадают</span>    
-        </div>
-			</div>
-			
-	 </div>
-   <div class="form-group">
-      <button>Send</button>
     </div>
 </form>
+
 
