try to do socket

--- a/src/app/ConversationComponents/dialogsList/dialogsList.component.html
+++ b/src/app/ConversationComponents/dialogsList/dialogsList.component.html
@@ -26,8 +26,8 @@
             </div>
           </div>
       </form>
-      <button class="btn btn-success" (click)="createDialog()">Create</button>
-      <button class="btn btn-danger" (click)="closeDialogForm()">Cancel</button>
+      <button class="btn btn-light" (click)="createDialog()">Create</button>
+      <button class="btn btn-dark" (click)="closeDialogForm()">Cancel</button>
     </div>
   </div>
  </body>
