--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -1,19 +1,26 @@
 body { margin: 0; }
 #CreationDialogForm{position: absolute; }
-#sidebar, #content { position: absolute; }
-#sidebar, #content { overflow: auto; padding: 10px; }
+#sidebar, #content, #Sending { position: absolute; }
+#sidebar, #content, #Sending { overflow: auto; padding: 10px; }
 #header {
- height: 80px;
+ height: 10%;
  border-bottom: 2px solid #7B5427;
 }
 #header h1 { padding: 20px; margin: 0; }
 #sidebar {
  width: 10%; border-right: 1px solid #231F20;
- top: 82px; /* Расстояние от верхнего края */
- bottom: 0; /* Расстояние снизу  */
+ top: 10%; /* Расстояние от верхнего края */
+ bottom: 25%; /* Расстояние снизу  */
 }
 #content {
- top: 82px; /* Расстояние от верхнего края */
- left: 170px; /* Расстояние от левого края */
- bottom: 0; right: 0;
+ top: 10%; /* Расстояние от верхнего края */
+ left: 10px; /* Расстояние от левого края */
+ bottom: 25%; right: 0;
+}
+#Sending {
+  top:75%;
+  width:100%;
+  height: 25%;
+  border-top: 10px solid #231F20;
+    background: #B0C4DE;
 }
