--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -2,6 +2,9 @@
     <div class="container">
         <div class="row d-flex flex-column justify-content-center  align-items-center">
             <div class="col-md-6 col-sm-12 text-center text-uppercase  signin-label font-weight-bold">Вход</div>
+			<div class="sign-in-errors">
+				<p>{{this.errorMessage}}</p>
+			</div>
             <div class="col-lg-4 col-md-10">
                 <div class="form-group">
                     <label  for="exampleInputEmail1">Email</label>
