--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,6 +3,28 @@
     display:flex;
     width:100%;
     justify-content:space-between;
-
 }
 
+.userInfo
+{
+  color:black;
+}
+
+.navbar-auth
+{
+    display:flex;
+}
+
+.navbarx
+{
+	height:10vh;
+	background-color:#24292e !important;
+	
+}
+
+.walpaper {
+    width: 100vw;
+    background: url("https://www.th3doctor.com/wp-content/uploads/2016/08/trac.jpg") no-repeat;
+    background-size: cover;
+    height:90vh;
+  }
