--- a/src/app/allusers/advertisement/advertisement.component.scss
+++ b/src/app/allusers/advertisement/advertisement.component.scss
@@ -3,7 +3,7 @@
 .adv-page
 {
     width:100vw;
-    background-color:#F6F6F6;
+    background-color:#e8e8e8;
     display:flex;
     padding:50px;
     min-height:100vh;
@@ -15,15 +15,23 @@
     font-weight:600;
 }
 
-
+.loading
+{
+    width:100vw;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:33px;
+}
 .advertisement-img
 {
     border:1px solid black;
 }
 .advertisement-tittle
 {
-    background-color:white;
+    
     font-size:22px;
+	background-color:#F6F6F6;
     text-align: center;
     padding:15px;
     font-weight:600;
@@ -34,6 +42,8 @@
 {
     padding:30px;
     box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+	background-color:#F6F6F6;
+	
 }
 
 img{
