--- a/src/app/allusers/all-advertisements/all-advertisements.component.html
+++ b/src/app/allusers/all-advertisements/all-advertisements.component.html
@@ -1,5 +1,5 @@
 <div class="adv-page">
-<div class="adv-tittle"> Все Oбъявлении </div>
+<div class="adv-tittle"> All Advertisements </div>
 <div class="all-adv">
  <p *ngFor="let advx of advs; let i = index">
     <app-advertisement-card [(adv)]="advx"></app-advertisement-card>
