--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbarx navbar-dark bg-dark">
   <div class="navbar-blocks">
       <div class="navbar-menu">
-          <a *ngIf="isLogin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
-          <a  *ngIf="isAdmin" mat-raised-button routerLink="/admin/changeprop">Админ панель</a>  
+          <a *ngIf="isLogin && !isAdmin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
+          <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>  
+          <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/rolecontrol">Роли</a>  
+          <a  *ngIf="isAdmin" mat-raised-button routerLink="/admin/subjectcontrol">Предметы</a>  
       </div>
         <div class="navbar-auth" *ngIf="!isLogin">
             <a mat-raised-button class="mr-4" routerLink="/signin">Войти</a>
@@ -15,3 +17,4 @@
   </div>
 </nav>
 <div class="walpaper"></div>
+<app-all-advertisements></app-all-advertisements>
