--- a/src/app/student/add-advertisement/add-advertisement.component.html
+++ b/src/app/student/add-advertisement/add-advertisement.component.html
@@ -12,18 +12,22 @@
                 </div>
                 <div class="form-group">
                     <label  for="sel1">Раздел</label>
-                    <select formControlName="advertisementSection" class="custom-select" id="sel1">
-                        <option selected>Выберите Раздел</option>
-                        <option value="PROGRAMMING">Программирование</option>
-                        <option value="MATHEMATICS">Математика</option>
-                        <option value="PHYSICS">Физика</option>
-                        <option value="INFORM">Информатика</option>
+                    <select formControlName="advertisementSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">  
+                        <option *ngFor="let subject of subjects" value="{{subject.name}}">{{subject.translateName}}</option>  
                       </select>
+                </div>
+                <div class="form-group">
+                    <label  for="exampleInputEmail1">Фото</label>
+                    <input  formControlName="imageUrl" type="text" class="form-control" id="Input1" aria-describedby="emailHelp" placeholder="Image Url">
                 </div>
                 <div class="form-group">
                     <label for="example-date-input" class="col-xs-2 col-form-label">Дедлайн Дата</label>
                      <input formControlName='deadlineDate' class="form-control" type="date"  id="example-date-input">
                 </div>
+                <div class="form-group">
+                    <label for="example-date-input" class="col-xs-2 col-form-label">Цена (РУБ.)</label>
+                    <input formControlName='budget' class="form-control" type="text"  id="example-number-input">
+                </div>          
 				<div class="form-group">
                     <label for="example-date-input" class="col-xs-2 col-form-label">Дедлайн Время</label>
                      <input formControlName='deadlineTime' value="23:59" class="form-control" type="time" id="example-time-input">
