--- a/src/app/ConversationComponents/dialogsList/dialogsList.component.scss
+++ b/src/app/ConversationComponents/dialogsList/dialogsList.component.scss
@@ -24,3 +24,9 @@ body { margin: 0; }
   width: 30%;
   height: 35%;
 }
+.btn-primary-spacing
+{
+margin-right: 5px;
+margin-bottom: 5px !important;
+margin-top: 5px;
+}
