--- a/src/app/ConversationComponents/dialog/dialog.component.html
+++ b/src/app/ConversationComponents/dialog/dialog.component.html
@@ -3,13 +3,24 @@
    <h1><mark>{{dialog?.name}}</mark></h1>
  </div>
  <div id="sidebar">
+   <button class="btn btn-info btn-primary-spacing" (click)="openUserAddForm()">Add user</button>
+   <button class="btn btn-dark btn-primary-spacing" (click)="liveDialog()">Live dialog</button>
+   <div *ngIf="dialog?.creatorId == user?.userId">
+     <button class="btn btn-danger btn-primary-spacing" (click)="deleteDialog()">Delete dialog</button>
+   </div>
+   <mark>Members:</mark>
+   <div *ngFor ='let user of dialogMembers'>
+     <div class="alert alert-warning">
+       {{user.name}}
+     </div>
+   </div>
  </div>
  <div id="Sending">
    <form class="mt-5" [formGroup]="dgService.getMessageForm()">
      <div class="container">
        <div class="form-group">
-         <textarea id="message" type="text" class="form-control" formControlName="text" [(ngModel)]="newMessage">write message</textarea>
-         <button class="btn btn-light" (click)="sendMessage()">Send</button>
+         <textarea id="message" placeholder="Write your message" type="text" class="form-control" formControlName="text" [(ngModel)]="textbox"></textarea>
+         <button class="btn btn-light btn-primary-spacing" (click)="sendMessage()">Send</button>
        </div>
     </div>
    </form>
@@ -17,21 +28,37 @@
  <div id="content" #scrollMe [scrollTop]="scrollMe.scrollHeight">
    <div class="container">
        <ul *ngFor ='let message of messages'>
-         <div *ngIf="message.sender.userId == userId; then thenBlock else elseBlock"></div>
-              <ng-template #thenBlock>
-                <div class="alert alert-success">
+         <div *ngIf="message.sender.userId == userId; then thisUserMessage else enatherUserMessage"></div>
+              <ng-template #thisUserMessage>
+                <div class="alert alert-info">
                   <h3>{{message.sender.name}}</h3>
                   {{message.text}}
                 </div>
               </ng-template>
-              <ng-template #elseBlock>
+              <ng-template #enatherUserMessage>
                 <div class="alert alert-primary">
                   <h3>{{message.sender.name}}</h3>
                   {{message.text}}
                 </div>
-              </ng-template>
-
+            </ng-template>
        </ul>
+   </div>
+ </div>
+ <div id="addUserForm" *ngIf="addUserVisible">
+   <div class="container">
+     <form [formGroup]="dgService.getAddUserForm()" class="mt-5">
+       <h1>Add user</h1>
+         <div class="form-group">
+           <label for="">User name</label>
+           <input id="Name" type="text" class="form-control" formControlName="userName" placeholder="Username" autocomplete="off" [(ngModel)]="newUserName">
+           <div *ngIf="dgService.getAddUserForm().controls['userName'].invalid && dgService.getAddUserForm().controls['userName'].touched" >
+             <small class="form-text text-muted" *ngIf="dgService.getAddUserForm().controls['userName'].errors.minlength">name is too short</small>
+             <small  class="form-text text-muted" *ngIf="dgService.getAddUserForm().controls['userName'].errors.maxlength">name is too long</small>
+           </div>
+         </div>
+     </form>
+     <button class="btn btn-light btn-primary-spacing" (click)="invite()">Invite</button>
+     <button class="btn btn-dark btn-primary-spacing" (click)="closeUserAddForm()">Cancel</button>
    </div>
  </div>
 </body>
