--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -1,5 +1,5 @@
 body { margin: 0; }
-#CreationDialogForm{position: absolute; }
+#addUserForm{position: absolute; }
 #sidebar, #content, #Sending { position: absolute; }
 #sidebar, #content, #Sending { overflow: auto; padding: 10px; }
 #header {
@@ -11,10 +11,13 @@ body { margin: 0; }
  width: 10%; border-right: 1px solid #231F20;
  top: 10%; /* Расстояние от верхнего края */
  bottom: 25%; /* Расстояние снизу  */
+ ul{
+   left:0px;
+ }
 }
 #content {
  top: 10%; /* Расстояние от верхнего края */
- left: 10px; /* Расстояние от левого края */
+ left: 10%; /* Расстояние от левого края */
  bottom: 25%; right: 0;
 }
 #Sending {
@@ -23,4 +26,17 @@ body { margin: 0; }
   height: 25%;
   border-top: 10px solid #231F20;
     background: #B0C4DE;
+}
+#addUserForm {
+  background: #B0C4DE;
+  left: 30%;
+  top: 30%;
+  width: 30%;
+  height: 35%;
+}
+.btn-primary-spacing
+{
+margin-right: 5px;
+margin-bottom: 5px !important;
+margin-top: 5px;
 }
