--- a/src/app/ConversationComponents/dialogsList/dialogsList.component.html
+++ b/src/app/ConversationComponents/dialogsList/dialogsList.component.html
@@ -1,8 +1,8 @@
  <body>
   <div id="header"><h1><mark>Your dialogs</mark></h1></div>
   <div id="sidebar">
-      <button class="btn btn-info" (click)="openDialogform()">Create new dialog</button>
-      </div>
+      <button class="btn btn-info btn-primary-spacing" (click)="openDialogform()">Create new dialog</button>
+  </div>
   <div id="content">
     <div class="container">
         <ul *ngFor ='let dialog of dialogs'>
@@ -19,15 +19,15 @@
         <h1>Create Dialog</h1>
           <div class="form-group">
             <label for="">Dialog name</label>
-            <input id="Name" type="text" class="form-control" formControlName="dialogName">
+            <input id="Name" type="text" class="form-control" formControlName="dialogName" autocomplete="off" placeholder="Dialog name" [(ngModel)]="newMessage">
             <div *ngIf="dgService.getDialogCreationForm().controls['dialogName'].invalid && dgService.getDialogCreationForm().controls['dialogName'].touched" >
               <small class="form-text text-muted" *ngIf="dgService.getDialogCreationForm().controls['dialogName'].errors.minlength">name is too short</small>
               <small  class="form-text text-muted" *ngIf="dgService.getDialogCreationForm().controls['dialogName'].errors.maxlength">name is too long</small>
             </div>
           </div>
       </form>
-      <button class="btn btn-light" (click)="createDialog()">Create</button>
-      <button class="btn btn-dark" (click)="closeDialogForm()">Cancel</button>
+      <button class="btn btn-light btn-primary-spacing" (click)="createDialog()">Create</button>
+      <button class="btn btn-dark btn-primary-spacing" (click)="closeDialogForm()">Cancel</button>
     </div>
   </div>
  </body>
