скачивает фотографию из компьютера отправлает в мейн, все фотографии получает из Amazon микросервиса

--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -9,7 +9,7 @@
                                 {{adv.advertisementName}}
                             </div>
                             <div class="col-12 p-0 advertisement-img">
-                                <img src="{{adv.imageUrl}}"/>
+                                <img  src='http://localhost:9999/getimg/{{adv.imageKey}}'/>
                                
                             </div>
                             <div class="col-12  advertisement-des"> 
