--- a/src/app/allusers/advertisement-card/advertisement-card.component.html
+++ b/src/app/allusers/advertisement-card/advertisement-card.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="true" class="blog-card" routerLink="/adv/{{adv.advertisementId}}">
     <div class="inner-part">
       <label class="img">
-        <img  src='{{adv.imageUrl}}'/>
+        <img  src='http://localhost:9999/getimg/{{adv.imageKey}}'/>
       </label>
       <div class="content ">
         <span>30 Январь 2020</span>
