отправляет на сервер уведомление что пользователь онлайн, создал компонент navbar добавил во всех страницах

--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -1,6 +1,6 @@
 
   
- 
+ <app-navbar></app-navbar>
  <div class="container mt-4">
  <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
