--- a/src/app/admin/role-control/role-control.component.html
+++ b/src/app/admin/role-control/role-control.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="role-container-prop ">
     <form [formGroup]="service.getRoleForm()" class="form-inline mt-5">
         <div class="form-group mx-sm-3 mb-2">
