--- a/src/app/ConversationComponents/dialogsList/dialogsList.component.html
+++ b/src/app/ConversationComponents/dialogsList/dialogsList.component.html
@@ -1,4 +1,5 @@
  <body>
+  <app-navbar></app-navbar>
   <div id="header"><h1><mark>Your dialogs</mark></h1></div>
   <div id="sidebar">
       <button class="btn btn-info btn-primary-spacing" (click)="openDialogform()">Create new dialog</button>
