--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,8 +12,11 @@
               <a mat-raised-button routerLink="/registration">Регистрация</a>
           </div>
           <div class="navbar-auth" *ngIf="isLogin">
+            <p class="mr-4 notification">
+                <mat-icon class="userInfo cursor" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
+            </p>
               <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
-              <p class="userInfo mr-2" >{{UserInfo.userName}}</p>
+               <a mat-raised-button class="mr-2" (click)="Logout()">Личный Кабинет</a>
           </div>
     </div>
   </nav>
