может фильтровать свои объявления (активые, в процессе, закрытые), при регистарации можно указать фото профиля

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,7 @@
             <p class="mr-4 notification">
                 <mat-icon class="userInfo cursor" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
             </p>
+             <a mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
               <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
                <a mat-raised-button class="mr-2" (click)="Logout()">Личный Кабинет</a>
           </div>
