--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -22,6 +22,12 @@
             </div>
             <div class="col-md-4 col-sm-12">
                 <div class="form-group" >
+                    <label for="exampleInputFile">Фото</label>
+                    <input type="file" (change)="handleFileInput($event.target.files)" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group" >
                     <label for="exampleInputEmail1">Email</label>
                     <input type="text" formControlName="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                     <div class="registration-field"
