--- a/src/app/allusers/all-advertisements/all-advertisements.component.html
+++ b/src/app/allusers/all-advertisements/all-advertisements.component.html
@@ -1,8 +1,9 @@
-<app-navbar></app-navbar>
+
 <div class="adv-page">
 <div class="adv-tittle"> All Advertisements </div>
+<app-advertisement-filter></app-advertisement-filter>
 <div class="all-adv">
- <p *ngFor="let advx of advs; let i = index">
+ <p *ngFor="let advx of advs; let i = index" class="advs">
     <app-advertisement-card [(adv)]="advx"></app-advertisement-card>
  <p>
 </div>
