--- a/src/app/allusers/all-advertisements/all-advertisements.component.scss
+++ b/src/app/allusers/all-advertisements/all-advertisements.component.scss
@@ -3,7 +3,7 @@
 
 .adv-page
 {
-  background-color:#F6F6F6;
+  background-color:#FCFCFC;
   height: 100vh;
   width:100vw;
   display:flex;
@@ -12,12 +12,12 @@
 }
 .all-adv{
   font-family: 'Fira Sans', sans-serif;
-  background-color:#F6F6F6;
+  background-color:#FCFCFC;
   display:flex;
-  padding-top:50px;
+  justify-content:center;
+  padding-top:10px;
   flex-wrap:wrap;
 }
-
 
 .adv-tittle
 {
@@ -27,4 +27,22 @@
   margin-bottom:22px;
   display:flex;
   justify-content:center;
+}
+
+.example-h2 {
+  margin: 10px;
+}
+
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+  width:100vw;
+  justify-content:center;
+  align-items:center;
+}
+
+.example-margin {
+  margin: 0 10px;
 }
