--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="regService.getRegForm()" class="mt-5">
+<form [formGroup]="regService.getRegForm()" class="p-5 reg">
     <div class="container">
         <div class="row d-flex flex-column justify-content-center  align-items-center">
             <div class="col-md-6 col-sm-12 text-center text-uppercase  registration-label font-weight-bold">Регистрация</div>
