--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -18,6 +18,11 @@
 }
 
 
+.reg
+{
+  background-color:#FCFCFC;
+}
+
 .registration-label
 {
   font-size:22px;
@@ -27,7 +32,7 @@
 {
     width:50%;
     padding:7px 0;
-    background-color:#fbfbfb;
+    background-color:#fCfCfC;
     display:inline-flex;
     justify-content:center;
 
