--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
-<div class="x">
-<form [formGroup]="signInService.getSignInForm()" class="signIn mt-5" >
+<div class="x p-5">
+<form [formGroup]="signInService.getSignInForm()" class="signIn" >
     <div class="container ">
         <div class="row d-flex flex-column justify-content-center  align-items-center ">
             <div class="col-md-6 col-sm-12 text-center text-uppercase  signin-label font-weight-bold">Вход</div>
