--- a/src/app/student/my-advertisements/my-advertisements.component.scss
+++ b/src/app/student/my-advertisements/my-advertisements.component.scss
@@ -13,11 +13,11 @@
     flex-direction:column;
     align-items:center;
     min-height:100vh;
+    background-color:#FAFAFA;
     
 }
 .prop-column
 {
-    border:1px solid brown;
     font-weight:500;
 }
 
