--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.html
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.html
@@ -1,10 +1,28 @@
 <div class="filter">
+    <form [formGroup]="service.getFilterForm()">
+        <div class="search_bar col-5">
+            <input type="text" formControlName="searchRow" class="search_input" placeholder="Поиск"/>
+            <span class="search_icon"><i class="fas fa-search"></i></span>                   
+        </div>
+    </form>
     <div>
-    <section class="example-section" (click)="refresh()">
+    <section class="example-section">
         <mat-checkbox class="example-margin"  [(ngModel)]="sub.checked"
         *ngFor="let sub of filters.subjects; let i = index" class="advs mr-2" >
             {{sub.translateName}}
         </mat-checkbox>
     </section>
+    <div >
+    <form [formGroup]="service.getFilterForm()">
+        <div class="form-group price">
+            <input formControlName="minPrice" type="text" (keypress)="numberOnly($event)" class="mr-3 col-2 form-control" id="min" placeholder="мин. цена">
+            <input type="text"  formControlName="maxPrice" (keypress)="numberOnly($event)" class="form-control col-2" id="max" placeholder="макс. цена">
+        </div>
+     </form>
     </div>
+    <div class="d-flex justify-content-center">
+        <button type="button"  (click)="refresh()" class="btn btn-success">Фильтровать</button>
+    </div>
+    </div>
+    <app-all-advertisements  *ngIf="isLoaded" [(advs)]="advs"></app-all-advertisements>
 </div>
