--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
 <div class="walpaper"></div>
-<app-all-advertisements></app-all-advertisements>
+<app-advertisement-filter></app-advertisement-filter>
