Добавил фильтры и поиск

--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.html
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.html
@@ -7,7 +7,7 @@
     </form>
     <div>
     <section class="example-section">
-        <mat-checkbox class="example-margin"  [(ngModel)]="sub.checked"
+        <mat-checkbox class="example-margin"  [(ngModel)]="sub.isChecked"
         *ngFor="let sub of filters.subjects; let i = index" class="advs mr-2" >
             {{sub.translateName}}
         </mat-checkbox>
