--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.scss
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.scss
@@ -38,13 +38,24 @@
    height:60px;
    background-color: #353b48;
    display:flex;
-   padding:10px;
-   margin:10px auto;
    align-items:center;
    justify-content:space-between;
    border-radius:30px;
  }
 
+ .myrow
+ {
+   display:flex;
+   flex-direction:row;
+   justify-content:center;
+   align-items:center;
+   margin:0 auto;
+ }
+
+ .choose_bar
+ {
+   padding:10px;
+ }
  .search_input
  {
   border:0;
