--- a/src/app/allusers/advertisement/advertisement.component.scss
+++ b/src/app/allusers/advertisement/advertisement.component.scss
@@ -54,9 +54,18 @@ img{
     object-fit: cover;
 }
 
+
 .edit 
 {
     cursor:pointer;
     font-weight:555;
     font-size:1.8rem;
+}
+
+
+.userName
+{
+    font-size:16px;
+    font-weight:555;
+    cursor:pointer
 }
