--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,7 @@
                 <mat-icon class="userInfo cursor" routerLink="/dialogsList" matBadge={{count}} matBadgeColor="warn">mail</mat-icon>
     
             </p>
+            <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myorders" >Мои заказы</a>
              <a *ngIf="!isAdmin" mat-raised-button class="mr-2" routerLink="/myadvertisements" >Мои объявления</a>
               <a mat-raised-button class="mr-2" (click)="Logout()">Выход</a>
                <a mat-raised-button class="mr-2" (click)="Logout()">Личный Кабинет</a>
@@ -41,3 +42,6 @@
       </div>
     </div>
   </div>
+
+
+ 
